Was impossible to outdent a subset of an indented block in CSS mode b=194963, r=kaie, sr=kin